--- a/src/main/resources/templates/WebKhachHang/list-new.html
+++ b/src/main/resources/templates/WebKhachHang/list-new.html
@@ -685,7 +685,7 @@
         chatMessages.scrollTop=chatMessages.scrollHeight;
 
         try{
-            const res=await fetch('https://lucnguyenthanhoai.app.n8n.cloud/webhook/website-chatbot',{
+            const res=await fetch('https://longpdth01286.app.n8n.cloud/webhook/website-chatbot',{
                 method:'POST',
                 headers:{'Content-Type':'application/json'},
                 body:JSON.stringify({body:{from:'user_123',message}})
